--- a/gurukul-english-medium-school/staff.html
+++ b/gurukul-english-medium-school/staff.html
@@ -526,7 +526,7 @@
         <div class="gm-container">
             <nav class="gm-nav" aria-label="Primary">
                 <!-- Logo -->
-                <a href="/index-3.html" class="gm-logo">
+                <a href="/index.html" class="gm-logo">
                     <img src="/gurukul-english-medium-school/logo.png" alt="KUMSS Logo" class="gm-logo-img">
                 </a>
 
@@ -539,7 +539,7 @@
 </button>
 
                <ul class="nav-links" id="navLinks">
-    <li><a class="nav-link" href="/index-3.html">Home</a></li>
+    <li><a class="nav-link" href="/index.html">Home</a></li>
 
     <li class="nav-item nav-dropdown" data-dropdown>
         <button class="nav-link nav-dropbtn" type="button" aria-haspopup="true" aria-expanded="false"
@@ -555,7 +555,7 @@
         </ul>
     </li>
     
-    <li><a class="nav-link" href="/index-3.html">Academics</a></li>
+    <li><a class="nav-link" href="/index.html">Academics</a></li>
     
     <li class="nav-item nav-dropdown" data-dropdown>
         <button class="nav-link nav-dropbtn" type="button" aria-haspopup="true" aria-expanded="false"
@@ -566,11 +566,11 @@
 
         <ul class="nav-submenu" id="institutesMenu" role="menu" aria-label="Institutes submenu">
             <li role="none"><a role="menuitem" href="/institute/vasatigruh-vidyalay-karhati.html">Vasatigruh Vidyalay Karhati</a></li>
-            <li role="none"><a role="menuitem" href="/index-3.html">New English School Dhakale</a></li>
-            <li role="none"><a role="menuitem" href="/index-3.html">Primary School Karhati Tembha</a></li>
-            <li role="none"><a role="menuitem" href="/index-3.html">KUMSS Private I.T.I Karhati</a></li>
-            <li role="none"><a role="menuitem" href="/index-3.html">Gurukul English Medium School</a></li>
-            <li role="none"><a role="menuitem" href="/index-3.html">Shardabai Pawar Kala Mahavidhyalaya</a></li>
+            <li role="none"><a role="menuitem" href="/index.html">New English School Dhakale</a></li>
+            <li role="none"><a role="menuitem" href="/index.html">Primary School Karhati Tembha</a></li>
+            <li role="none"><a role="menuitem" href="/index.html">KUMSS Private I.T.I Karhati</a></li>
+            <li role="none"><a role="menuitem" href="/index.html">Gurukul English Medium School</a></li>
+            <li role="none"><a role="menuitem" href="/index.html">Shardabai Pawar Kala Mahavidhyalaya</a></li>
         </ul>
     </li>
 
@@ -813,12 +813,12 @@
                 <div class="footer-col">
                     <h3 style="color: var(--primaryColor); margin-bottom: 1.5rem; font-weight: 700; font-size: 1.25rem;">Quick Links</h3>
                     <ul class="footer-links">
-                        <li><a href="/index-3.html">Home</a></li>
+                        <li><a href="/index.html">Home</a></li>
                         <li><a href="/about.html">About KUMSS</a></li>
-                        <li><a href="/index-3.html#vision-mission">Vision & Mission</a></li>
-                        <li><a href="/index-3.html#courses">Programs</a></li>
-                        <li><a href="/index-3.html#leadership">Leadership</a></li>
-                        <li><a href="/index-3.html#contact">Contact Us</a></li>
+                        <li><a href="/index.html#vision-mission">Vision & Mission</a></li>
+                        <li><a href="/index.html#courses">Programs</a></li>
+                        <li><a href="/index.html#leadership">Leadership</a></li>
+                        <li><a href="/index.html#contact">Contact Us</a></li>
                     </ul>
                 </div>
 
