--- a/index.html
+++ b/index.html
@@ -86,20 +86,20 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a href="javascript:void(0)" class="nav-link active"> Home </a>
+              <a href="#" class="nav-link active"> Home </a>
             </li>
 
             <li class="nav-item">
-              <a href="javascript:void(0)" class="nav-link"> About us </a>
+              <a href="/about.html" class="nav-link"> About</a>
             </li>
 
             <li class="nav-item">
-              <a href="javascript:void(0)" class="dropdown-toggle nav-link">
+              <a href="#" class="dropdown-toggle nav-link">
                 Our Educational Institutes
               </a>
               <ul class="dropdown-menu">
                 <li class="nav-item">
-                  <a href="programs.html" class="nav-link">
+                  <a href="#" class="nav-link">
                     Vasatigruh Vidyalay Karhati
                   </a>
                 </li>
@@ -130,31 +130,15 @@
                 </li>
               </ul>
             </li>
-            <li class="nav-item">
-              <a href="javascript:void(0)" class="dropdown-toggle nav-link">
-                Admissions
-              </a>
-              <ul class="dropdown-menu">
-                <li class="nav-item">
-                  <a href="apply.html" class="nav-link"> How To Apply </a>
-                </li>
-                <li class="nav-item">
-                  <a href="tuition-fees.html" class="nav-link">
-                    Tuition & Fees
-                  </a>
-                </li>
-              </ul>
-            </li>
+           
 
             <li class="nav-item">
-              <a href="javascript:void(0)" class="nav-link"> Gallery </a>
+              <a href="/gallery.html" class="nav-link"> Gallery </a>
             </li>
-
-            <li class="nav-item">
-              <a href="javascript:void(0)" class="dropdown-toggle nav-link">
-                Careers
-              </a>
+ <li class="nav-item">
+              <a href="/careers.html" class="nav-link">Careers</a>
             </li>
+            
 
             <li class="nav-item">
               <a href="contact.html" class="nav-link">
@@ -218,15 +202,15 @@
 
           <!-- ABOUT US -->
           <li class="responsive-menu-list without-icon">
-            <a href="javascript:void(0)" class="nav-link">About us</a>
+            <a href="/about.html" class="nav-link">About</a>
           </li>
 
           <!-- OUR EDUCATIONAL INSTITUTES (Dropdown) -->
           <li class="responsive-menu-list">
-            <a href="javascript:void(0);">Our Educational Institutes</a>
+            <a href="#">Our Educational Institutes</a>
             <ul class="responsive-menu-items">
               <li class="nav-item">
-                <a href="programs.html" class="nav-link">
+                <a href="#" class="nav-link">
                   Vasatigruh Vidyalay Karhati
                 </a>
               </li>
@@ -258,29 +242,14 @@
             </ul>
           </li>
 
-          <!-- ADMISSIONS (Dropdown) -->
-          <li class="responsive-menu-list">
-            <a href="javascript:void(0);">Admissions</a>
-            <ul class="responsive-menu-items">
-              <li class="nav-item">
-                <a href="apply.html" class="nav-link"> How To Apply </a>
-              </li>
-              <li class="nav-item">
-                <a href="tuition-fees.html" class="nav-link">
-                  Tuition & Fees
-                </a>
-              </li>
-            </ul>
-          </li>
 
           <!-- GALLERY -->
           <li class="responsive-menu-list without-icon">
-            <a href="javascript:void(0)" class="nav-link">Gallery</a>
+            <a href="/gallery.html" class="nav-link">Gallery</a>
           </li>
 
-          <!-- CAREERS -->
-          <li class="responsive-menu-list without-icon">
-            <a href="javascript:void(0)" class="nav-link">Careers</a>
+           <li class="responsive-menu-list without-icon">
+            <a href="/careers.html" class="nav-link">Careers</a>
           </li>
 
           <!-- CONTACT US -->
