--- a/shardabai-pawar-kala-mahavidhyalaya/shardabai-pawar-kala-mahavidhyalaya.html
+++ b/shardabai-pawar-kala-mahavidhyalaya/shardabai-pawar-kala-mahavidhyalaya.html
@@ -769,7 +769,7 @@ margin-top: -250px;
         <div class="gm-container">
             <nav class="gm-nav" aria-label="Primary">
                 <!-- Logo -->
-                <a href="/index-3.html" class="gm-logo">
+                <a href="/index.html" class="gm-logo">
                     <img src="/assets/kumss_log.png" alt="KUMSS Logo" class="gm-logo-img">
                 </a>
 
@@ -800,10 +800,10 @@ margin-top: -250px;
 
                         <ul class="gm-submenu" id="institutesMenu" role="menu" aria-label="Institutes submenu">
                             <li role="none"><a role="menuitem" href="/institute/vasatigruh-vidyalay-karhati.html">Vasatigruh Vidyalay Karhati</a></li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">New English School Dhakale</a></li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">Primary School Karhati Tembha</a>
+                            <li role="none"><a role="menuitem" href="/index.html">New English School Dhakale</a></li>
+                            <li role="none"><a role="menuitem" href="/index.html">Primary School Karhati Tembha</a>
                             </li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">KUMSS Private I.T.I Karhati</a></li>
+                            <li role="none"><a role="menuitem" href="/index.html">KUMSS Private I.T.I Karhati</a></li>
                             <li role="none"><a role="menuitem" href="">Gurukul English Medium School</a>
                             </li>
                             <li role="none"><a role="menuitem" href="./shardabai-pawar-kala-mahavidhyalaya.html">Shardabai Pawar Kala
