--- a/shardabai-pawar-kala-mahavidhyalaya/staff.html
+++ b/shardabai-pawar-kala-mahavidhyalaya/staff.html
@@ -215,7 +215,7 @@
     <header class="gm-header" id="header">
         <div class="gm-container">
             <nav class="gm-nav" aria-label="Primary">
-                <a href="/index-3.html" class="gm-logo">
+                <a href="/index.html" class="gm-logo">
                     <img src="/assets/kumss_log.png" alt="KUMSS Logo" class="gm-logo-img">
                 </a>
                 <button class="gm-burger" id="mobileMenuBtn" type="button" aria-label="Open menu">
@@ -229,14 +229,14 @@
                         <ul class="gm-submenu">
                             <li><a href="/institute/vasatigruh-vidyalay-karhati.html">Vasatigruh Vidyalay Karhati</a></li>
                             <li><a href="/new-english-medium-dhakale/new-english-medium-school-dhakale.html">New English School Dhakale</a></li>
-                            <li><a href="/index-3.html">Primary School Karhati Tembha</a></li>
-                            <li><a href="/index-3.html">KUMSS Private I.T.I Karhati</a></li>
-                            <li><a href="/index-3.html">Gurukul English Medium School</a></li>
+                            <li><a href="/index.html">Primary School Karhati Tembha</a></li>
+                            <li><a href="/index.html">KUMSS Private I.T.I Karhati</a></li>
+                            <li><a href="/index.html">Gurukul English Medium School</a></li>
                             <li><a href="/shardabai-pawar-kala-mahavidhyalaya/shardabai-pawar-kala-mahavidhyalaya.html">Shardabai Pawar Kala Mahavidhyalaya</a></li>
                         </ul>
                     </li>
                     <li class="gm-item"><a class="gm-link active" style="color: var(--primary-color); font-weight:600;" href="./staff.html">Staff</a></li>
-                    <li><a class="gm-link" href="/index-3.html#testimonials">Gallery</a></li>
+                    <li><a class="gm-link" href="/index.html#testimonials">Gallery</a></li>
                     <li class="gm-cta"><a class="gm-btn" href="tel:+919421394242">Contact Us</a></li>
                 </ul>
             </nav>
