--- a/vasatigruh-vidyalay-karhati/staff.html
+++ b/vasatigruh-vidyalay-karhati/staff.html
@@ -215,28 +215,28 @@
     <header class="gm-header" id="header">
         <div class="gm-container">
             <nav class="gm-nav" aria-label="Primary">
-                <a href="/index-3.html" class="gm-logo">
+                <a href="/index.html" class="gm-logo">
                     <img src="/assets/kumss_log.png" alt="KUMSS Logo" class="gm-logo-img">
                 </a>
                 <button class="gm-burger" id="mobileMenuBtn" type="button" aria-label="Open menu">
                     <span class="gm-burger-line"></span><span class="gm-burger-line"></span><span class="gm-burger-line"></span>
                 </button>
                 <ul class="gm-links" id="navLinks">
-                    <li><a class="gm-link" href="/index-3.html">Home</a></li>
+                    <li><a class="gm-link" href="/index.html">Home</a></li>
                     <li class="gm-item"><a class="gm-link" href="/about.html">About</a></li>
                     <li class="gm-item gm-dropdown" data-dropdown>
                         <button class="gm-link gm-dropbtn" type="button">Our Educational Institutes <i class="fas fa-chevron-down gm-chevron"></i></button>
                         <ul class="gm-submenu">
                             <li><a href="/institute/vasatigruh-vidyalay-karhati.html">Vasatigruh Vidyalay Karhati</a></li>
-                            <li><a href="/index-3.html">New English School Dhakale</a></li>
-                            <li><a href="/index-3.html">Primary School Karhati Tembha</a></li>
-                            <li><a href="/index-3.html">KUMSS Private I.T.I Karhati</a></li>
-                            <li><a href="/index-3.html">Gurukul English Medium School</a></li>
-                            <li><a href="/index-3.html">Shardabai Pawar Kala Mahavidhyalaya</a></li>
+                            <li><a href="/index.html">New English School Dhakale</a></li>
+                            <li><a href="/index.html">Primary School Karhati Tembha</a></li>
+                            <li><a href="/index.html">KUMSS Private I.T.I Karhati</a></li>
+                            <li><a href="/index.html">Gurukul English Medium School</a></li>
+                            <li><a href="/index.html">Shardabai Pawar Kala Mahavidhyalaya</a></li>
                         </ul>
                     </li>
                     <li class="gm-item"><a class="gm-link active" style="color: var(--primary-color); font-weight:600;" href="/vasatigruh-vidyalay-karhati/staff.html">Staff</a></li>
-                    <li><a class="gm-link" href="/index-3.html#testimonials">Gallery</a></li>
+                    <li><a class="gm-link" href="/index.html#testimonials">Gallery</a></li>
                     <li class="gm-cta"><a class="gm-btn" href="tel:+919421394242">Contact Us</a></li>
                 </ul>
             </nav>
@@ -580,12 +580,12 @@
                 <div class="footer-col">
                     <h3 style="color: var(--blackColor); margin-bottom: 1.5rem; font-weight: 700; font-size: 1.25rem;">Quick Links</h3>
                     <ul class="footer-links">
-                        <li><a href="/index-3.html">Home</a></li>
+                        <li><a href="/index.html">Home</a></li>
                         <li><a href="/about.html">About KUMSS</a></li>
-                        <li><a href="/index-3.html#vision-mission">Vision & Mission</a></li>
-                        <li><a href="/index-3.html#courses">Programs</a></li>
-                        <li><a href="/index-3.html#leadership">Leadership</a></li>
-                        <li><a href="/index-3.html#contact">Contact Us</a></li>
+                        <li><a href="/index.html#vision-mission">Vision & Mission</a></li>
+                        <li><a href="/index.html#courses">Programs</a></li>
+                        <li><a href="/index.html#leadership">Leadership</a></li>
+                        <li><a href="/index.html#contact">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
