--- a/apply.html
+++ b/apply.html
@@ -120,7 +120,7 @@
                   <a href="index-2.html" class="nav-link"> Home Demo - Two </a>
                 </li>
                 <li class="nav-item">
-                  <a href="index-3.html" class="nav-link">
+                  <a href="index.html" class="nav-link">
                     Home Demo - Three
                   </a>
                 </li>
@@ -325,7 +325,7 @@
                 <a href="index-2.html" class="nav-link"> Home Demo - Two </a>
               </li>
               <li class="nav-item">
-                <a href="index-3.html" class="nav-link"> Home Demo - Three </a>
+                <a href="index.html" class="nav-link"> Home Demo - Three </a>
               </li>
             </ul>
           </li>
