--- a/gurukul-english-medium-school/about.html
+++ b/gurukul-english-medium-school/about.html
@@ -149,7 +149,7 @@ html,body{
         <div class="gm-container">
             <nav class="gm-nav" aria-label="Primary">
                 <!-- Logo -->
-                <a href="/index-3.html" class="gm-logo">
+                <a href="/index.html" class="gm-logo">
                     <img src="/gurukul-english-medium-school/logo.png" alt="KUMSS Logo" class="gm-logo-img">
                 </a>
 
@@ -163,7 +163,7 @@ html,body{
 
                 <!-- Links -->
                 <ul class="gm-links" id="navLinks">
-                    <li><a class="gm-link" href="/index-3.html">Home</a></li>
+                    <li><a class="gm-link" href="/index.html">Home</a></li>
 
                    <li class="gm-item gm-dropdown" data-dropdown>
                         <!-- Desktop uses hover/focus. Mobile uses this button. -->
@@ -180,7 +180,7 @@ html,body{
                             </li>
                         </ul>
                     </li>
-                      <li><a class="gm-link" href="/index-3.html">Academics</a></li>
+                      <li><a class="gm-link" href="/index.html">Academics</a></li>
                     <!-- Dropdown -->
                     <li class="gm-item gm-dropdown" data-dropdown>
                         <!-- Desktop uses hover/focus. Mobile uses this button. -->
@@ -192,13 +192,13 @@ html,body{
 
                         <ul class="gm-submenu" id="institutesMenu" role="menu" aria-label="Institutes submenu">
                             <li role="none"><a role="menuitem" href="/institute/vasatigruh-vidyalay-karhati.html">Vasatigruh Vidyalay Karhati</a></li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">New English School Dhakale</a></li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">Primary School Karhati Tembha</a>
+                            <li role="none"><a role="menuitem" href="/index.html">New English School Dhakale</a></li>
+                            <li role="none"><a role="menuitem" href="/index.html">Primary School Karhati Tembha</a>
                             </li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">KUMSS Private I.T.I Karhati</a></li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">Gurukul English Medium School</a>
+                            <li role="none"><a role="menuitem" href="/index.html">KUMSS Private I.T.I Karhati</a></li>
+                            <li role="none"><a role="menuitem" href="/index.html">Gurukul English Medium School</a>
                             </li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">Shardabai Pawar Kala
+                            <li role="none"><a role="menuitem" href="/index.html">Shardabai Pawar Kala
                                     Mahavidhyalaya</a></li>
                         </ul>
                     </li>
