--- a/kumss-private-iti-Karhati/index.html
+++ b/kumss-private-iti-Karhati/index.html
@@ -66,7 +66,7 @@
         <div class="gm-container">
             <nav class="gm-nav" aria-label="Primary">
                 <!-- Logo -->
-                <a href="/index-3.html" class="gm-logo">
+                <a href="/index.html" class="gm-logo">
                     <img src="https://kumss.org/assets/kumss_log.png" alt="Primary School Karhati Tembha" class="gm-logo-img">
                 </a>
 
