--- a/new-english-medium-dhakale/new-english-medium-school-dhakale.html
+++ b/new-english-medium-dhakale/new-english-medium-school-dhakale.html
@@ -66,7 +66,7 @@
         <div class="gm-container">
             <nav class="gm-nav" aria-label="Primary">
                 <!-- Logo -->
-                <a href="/index-3.html" class="gm-logo">
+                <a href="/index.html" class="gm-logo">
                     <img src="https://kumss.org/assets/kumss_log.png" alt="KUMSS Logo" class="gm-logo-img">
                 </a>
 
@@ -80,7 +80,7 @@
 
                 <!-- Links -->
                 <ul class="gm-links" id="navLinks">
-                    <li><a class="gm-link" href="/index-3.html">Home</a></li>
+                    <li><a class="gm-link" href="/index.html">Home</a></li>
 
                     <li class="gm-item">
                         <a class="gm-link" href="/about.html">About</a>
@@ -97,13 +97,13 @@
 
                         <ul class="gm-submenu" id="institutesMenu" role="menu" aria-label="Institutes submenu">
                             <li role="none"><a role="menuitem" href="/institute/vasatigruh-vidyalay-karhati.html">Vasatigruh Vidyalay Karhati</a></li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">New English School Dhakale</a></li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">Primary School Karhati Tembha</a>
+                            <li role="none"><a role="menuitem" href="/index.html">New English School Dhakale</a></li>
+                            <li role="none"><a role="menuitem" href="/index.html">Primary School Karhati Tembha</a>
                             </li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">KUMSS Private I.T.I Karhati</a></li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">Gurukul English Medium School</a>
+                            <li role="none"><a role="menuitem" href="/index.html">KUMSS Private I.T.I Karhati</a></li>
+                            <li role="none"><a role="menuitem" href="/index.html">Gurukul English Medium School</a>
                             </li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">Shardabai Pawar Kala
+                            <li role="none"><a role="menuitem" href="/index.html">Shardabai Pawar Kala
                                     Mahavidhyalaya</a></li>
                         </ul>
                     </li>
