--- a/tuition-fees.html
+++ b/tuition-fees.html
@@ -124,7 +124,7 @@
                   <a href="index-2.html" class="nav-link"> Home Demo - Two </a>
                 </li>
                 <li class="nav-item">
-                  <a href="index-3.html" class="nav-link">
+                  <a href="index.html" class="nav-link">
                     Home Demo - Three
                   </a>
                 </li>
@@ -327,7 +327,7 @@
                 <a href="index-2.html" class="nav-link"> Home Demo - Two </a>
               </li>
               <li class="nav-item">
-                <a href="index-3.html" class="nav-link"> Home Demo - Three </a>
+                <a href="index.html" class="nav-link"> Home Demo - Three </a>
               </li>
             </ul>
           </li>
