--- a/university-life.html
+++ b/university-life.html
@@ -124,7 +124,7 @@
                   <a href="index-2.html" class="nav-link"> Home Demo - Two </a>
                 </li>
                 <li class="nav-item">
-                  <a href="index-3.html" class="nav-link">
+                  <a href="index.html" class="nav-link">
                     Home Demo - Three
                   </a>
                 </li>
@@ -195,21 +195,7 @@
               </ul>
             </li>
 
-            <li class="nav-item">
-              <a href="javascript:void(0)" class="dropdown-toggle nav-link">
-                Admissions
-              </a>
-              <ul class="dropdown-menu">
-                <li class="nav-item">
-                  <a href="apply.html" class="nav-link"> How To Apply </a>
-                </li>
-                <li class="nav-item">
-                  <a href="tuition-fees.html" class="nav-link">
-                    Tuition & Fees
-                  </a>
-                </li>
-              </ul>
-            </li>
+           
 
             <li class="nav-item">
               <a href="javascript:void(0)" class="dropdown-toggle nav-link">
@@ -327,7 +313,7 @@
                 <a href="index-2.html" class="nav-link"> Home Demo - Two </a>
               </li>
               <li class="nav-item">
-                <a href="index-3.html" class="nav-link"> Home Demo - Three </a>
+                <a href="index.html" class="nav-link"> Home Demo - Three </a>
               </li>
             </ul>
           </li>
