url linking done

--- a/about.html
+++ b/about.html
@@ -541,12 +541,12 @@
             <li class="nav-item">
               <a href="javascript:void(0)" class="dropdown-toggle nav-link">Our Educational Institutes</a>
               <ul class="dropdown-menu">
-                <li class="nav-item"><a href="programs.html" class="nav-link">Vasatigruh Vidyalay Karhati</a></li>
-                <li class="nav-item"><a href="program-details.html" class="nav-link">New English School, Dhakale</a></li>
-                <li class="nav-item"><a href="events.html" class="nav-link">Primary School, Tembha</a></li>
-                <li class="nav-item"><a href="event-details.html" class="nav-link">KUMSS Private I.T.I Karhati</a></li>
-                <li class="nav-item"><a href="event-details.html" class="nav-link">Gurukul English Medium School</a></li>
-                <li class="nav-item"><a href="event-details.html" class="nav-link">Shardabai Pawar Kala Mahavidhyalaya</a></li>
+                <li class="nav-item"><a href="/vasatigruh-vidyalay-karhati/vasatigruh-vidyalay-karhati.html" class="nav-link">Vasatigruh Vidyalay Karhati</a></li>
+                <li class="nav-item"><a href="/new-english-school-dhakale/new-english-school-dhakale.html" class="nav-link">New English School, Dhakale</a></li>
+                <li class="nav-item"><a href="/primary-school-tembha/primary-school-tembha.html" class="nav-link">Primary School, Tembha</a></li>
+                <li class="nav-item"><a href="/kumss-private-iti-Karhati/kumss-private-iti-Karhati.html" class="nav-link">KUMSS Private I.T.I Karhati</a></li>
+                <li class="nav-item"><a href="/gurukul-english-medium-school/gurukul-english-medium-school.html" class="nav-link">Gurukul English Medium School</a></li>
+                <li class="nav-item"><a href="/shardabai-pawar-kala-mahavidhyalaya/shardabai-pawar-kala-mahavidhyalaya.html" class="nav-link">Shardabai Pawar Kala Mahavidhyalaya</a></li>
               </ul>
             </li>
 
@@ -615,12 +615,12 @@
           <li class="responsive-menu-list">
             <a href="javascript:void(0);">Our Educational Institutes</a>
             <ul class="responsive-menu-items">
-              <li class="nav-item"><a href="programs.html" class="nav-link">Vasatigruh Vidyalay Karhati</a></li>
-              <li class="nav-item"><a href="program-details.html" class="nav-link">New English School, Dhakale</a></li>
-              <li class="nav-item"><a href="events.html" class="nav-link">Primary School, Tembha</a></li>
-              <li class="nav-item"><a href="event-details.html" class="nav-link">KUMSS Private I.T.I Karhati</a></li>
-              <li class="nav-item"><a href="event-details.html" class="nav-link">Gurukul English Medium School</a></li>
-              <li class="nav-item"><a href="event-details.html" class="nav-link">Shardabai Pawar Kala Mahavidhyalaya</a></li>
+              <li class="nav-item"><a href="/vasatigruh-vidyalay-karhati/vasatigruh-vidyalay-karhati.html" class="nav-link">Vasatigruh Vidyalay Karhati</a></li>
+              <li class="nav-item"><a href="/new-english-school-dhakale/new-english-school-dhakale.html" class="nav-link">New English School, Dhakale</a></li>
+              <li class="nav-item"><a href="/primary-school-tembha/primary-school-tembha.html" class="nav-link">Primary School, Tembha</a></li>
+              <li class="nav-item"><a href="/kumss-private-iti-Karhati/kumss-private-iti-Karhati.html" class="nav-link">KUMSS Private I.T.I Karhati</a></li>
+              <li class="nav-item"><a href="/gurukul-english-medium-school/gurukul-english-medium-school.html" class="nav-link">Gurukul English Medium School</a></li>
+              <li class="nav-item"><a href="/shardabai-pawar-kala-mahavidhyalaya/shardabai-pawar-kala-mahavidhyalaya.html" class="nav-link">Shardabai Pawar Kala Mahavidhyalaya</a></li>
             </ul>
           </li>
 
@@ -1162,9 +1162,8 @@
             <ul class="footer-links">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About KUMSS</a></li>
-              <li><a href="university-overview.html">Vision & Mission</a></li>
-              <li><a href="program-details.html">Programs</a></li>
-              <li><a href="about.html#leadership">Leadership</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="careers.html">Careers</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
@@ -1172,10 +1171,10 @@
           <div class="footer-col">
             <h3 class="footer-title">Our Institutes</h3>
             <ul class="footer-links">
-              <li><a href="#" target="_blank" rel="noopener">Vasatigruh Vidyalay Karhati</a></li>
-              <li><a href="#" target="_blank" rel="noopener">New English School, Dhakale</a></li>
-              <li><a href="#" target="_blank" rel="noopener">Primary School, Tembha</a></li>
-              <li><a href="#" target="_blank" rel="noopener">KUMSS Private I.T.I</a></li>
+              <li><a href="/vasatigruh-vidyalay-karhati/vasatigruh-vidyalay-karhati.html" target="_blank" rel="noopener">Vasatigruh Vidyalay Karhati</a></li>
+              <li><a href="/new-english-school-dhakale/new-english-school-dhakale.html" target="_blank" rel="noopener">New English School, Dhakale</a></li>
+              <li><a href="/primary-school-tembha/primary-school-tembha.html" target="_blank" rel="noopener">Primary School, Tembha</a></li>
+              <li><a href="/kumss-private-iti-Karhati/kumss-private-iti-Karhati.html" target="_blank" rel="noopener">KUMSS Private I.T.I</a></li>
             </ul>
           </div>
 
