--- a/our-educational-institute.html
+++ b/our-educational-institute.html
@@ -415,9 +415,8 @@
             <ul class="footer-links">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About KUMSS</a></li>
-              <li><a href="university-overview.html">Vision & Mission</a></li>
-              <li><a href="program-details.html">Programs</a></li>
-              <li><a href="about.html#leadership">Leadership</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="careers.html">Careers</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
